--- a/Home/home.html
+++ b/Home/home.html
@@ -94,7 +94,7 @@
     </div>
   </section>
   <!-- Footer -->
-  <footer class="footer">
+  <footer>
     <div class="container">
       <div class="footer-content">
         <span>Hoa Vàng © 2017 | Giấy phép | Liên hệ</span>
