--- a/Home/home.html
+++ b/Home/home.html
@@ -90,7 +90,7 @@
   <!-- Section -->
   <section>
     <div class="section-content">
-      <h4>Chào mừng đến với trang chủ</h4>
+      <h4>Chào mừng đến với công ty Hoa Vàng</h4>
     </div>
   </section>
   <!-- Footer -->
