--- a/Unit/index.html
+++ b/Unit/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trang chủ</title>
-  <link rel="stylesheet" href="home.css">
+  <title>Học Tiếng Hàn</title>
+  <link rel="stylesheet" href="../Home/home.css">
+  <link rel="stylesheet" href="index.css">
   <link rel="icon" href="../assets/images/logo_tab.png">
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -34,11 +35,11 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 d-flex justify-content-between align-items-center">
           <li class="nav-item">
-            <a class="nav-link active" href="#">Trang chủ</a>
+            <a class="nav-link" href="../Home/home.html">Trang chủ</a>
           </li>
           <!-- Dropdown for "Học tiếng Hàn" -->
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="../Unit/index.html" id="navbarDropdown" role="button">
+            <a class="nav-link dropdown-toggle active" href="../Unit/index.html" id="navbarDropdown" role="button">
               Học tiếng Hàn
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -90,7 +91,43 @@
   <!-- Section -->
   <section>
     <div class="section-content">
-      <h4>Chào mừng đến với công ty Hoa Vàng</h4>
+      <h4>HỌC TIẾNG HÀN</h4>
+    </div>
+  </section>
+  <section class="title">
+    <div class="section-content">
+      <p>Welcome to Unit 1 of HowtoStudyKorean.com. My little sister told me that she taught you how to read Korean!
+        That’s good, because here in Unit 1 you will start learning basic grammar, words and sentence structures. It is
+        very important when you learn a language to build up your vocabulary to be able to speak in every day
+        conversations. But, because your are just starting out, the first few lessons in this Unit will have a smaller
+        amount of new words than usual. As you progress, lessons will include more and more words to add to your
+        vocabulary!</p>
+    </div>
+    <div class="section-content card">
+      <img data-url="Lessons/lesson1-8.html" class="mb-2" src="../assets/images/Lessons-1-8-picture.png" alt="">
+      <p><span data-url="Lessons/lesson1-8.html">Lessons 1 – 8: </span>Start learning actual grammar, phrases, and
+        words that
+        you can apply to daily
+        conversation! We will start by introducing you to basic Korean sentence structure, which will lead into you
+        making your own sentences using proper conjugation techniques. You will also learn about all the irregulars in
+        Korean grammar, and how to use them in sentences. These first 8 lessons are hard, but they will be a strong
+        foundation for your future studies.
+    </div>
+    <div class="section-content card">
+      <img class="mb-2" src="../assets/images/Lesson-9-16-pic.png" alt="">
+      <p><span>Lessons 9 – 16: </span>These lessons will build heavily on what you learned from earlier lessons. In
+        these lessons, you will be introduced to numbers in Korean and how to deal with telling time, counting things,
+        and many more things that require an understanding of numbers (Korean numbers are very confusing!). In addition,
+        you will learn about passive verbs, asking questions, and how to use many grammar formations to create many new
+        sentences!
+    </div>
+    <div class="section-content card">
+      <img class="mb-2" src="../assets/images/1725picture.png" alt="">
+      <p><span>Lessons 17 – 25: </span>In these final 8 lessons of Unit 1, you will be introduced to connecting
+        particles in Korean. Eventually, you will learn hundreds of these particles, but here in these lessons, you will
+        be introduced to the most basic ones (~고, ~고 싶다 and ~고 있다 to name a few). You will also learn about using 잘/못 in
+        sentences to indicate that you do something well/poorly. In addition, you will learn the many different ways
+        that you can ask questions in Korean, along with the words 이렇다, 그렇다 and 저렇다.
     </div>
   </section>
   <!-- Footer -->
@@ -109,6 +146,6 @@
 
 </body>
 
-<script src="home.js"></script>
+<script src="index.js"></script>
 
 </html>
