--- a/Home/home.html
+++ b/Home/home.html
@@ -36,23 +36,24 @@
           <li class="nav-item">
             <a class="nav-link active" href="#">Trang chủ</a>
           </li>
-          <!-- Dropdown for "Học tiếng Hàn" -->
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="../Unit/index.html" id="navbarDropdown" role="button">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
               Học tiếng Hàn
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <!-- Tiếng Hàn cơ bản -->
-              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#myModal"
-                onclick="loadContent('Tiếng Hàn cơ bản')">Tiếng Hàn cơ bản</a>
+              <!-- <a class="dropdown-item" href="#" data-toggle="modal" data-target="#myModal"
+                onclick="loadContent('Tiếng Hàn cơ bản')">Tiếng Hàn cơ bản</a> -->
+              <a class="dropdown-item" href="../unit/basic/index.html"">Tiếng Hàn cơ bản</a>
               <!-- Tiếng Hàn cho thuyền viên -->
-              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#myModal"
-                onclick="loadContent('Tiếng Hàn cho thuyền viên')">Tiếng Hàn cho thuyền viên</a>
+              <!-- <a class=" dropdown-item" href="#" data-toggle="modal" data-target="#myModal"
+                onclick="loadContent('Tiếng Hàn cho thuyền viên')">Tiếng Hàn cho thuyền viên</a> -->
+              <a class="dropdown-item" href="../unit/basic/index.html"">Tiếng Hàn cho thuyển viên</a>
             </div>
           </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="#">Giáo dục an toàn</a>
+          <li class=" nav-item">
+                <a class="nav-link" href="#">Giáo dục an toàn</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Thông báo</a>
@@ -68,6 +69,7 @@
     </div>
   </nav>
   <!-- Modal -->
+  <!-- 
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -79,14 +81,13 @@
           </button>
         </div>
         <div class="modal-body" id="modalBody">
-          <!-- Nội dung sẽ được thay đổi khi nhấn vào Tiếng Hàn cơ bản hoặc Tiếng Hàn cho thuyền viên -->
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- Section -->
   <section>
     <div class="section-content">
@@ -99,9 +100,9 @@
       <div class="footer-content">
         <span>Hoa Vàng © 2017 | Giấy phép | Liên hệ</span>
         <div class="social-icons">
-          <a href="#"><img src="../assets/images/link_talk.png" alt="KakaoTalk"></a>
-          <a href="#"><img src="../assets/images/link_zalo.png" alt="Zalo"></a>
-          <a href="#"><img src="../assets/images/link_facebook.png" alt="Facebook"></a>
+          <a href="#"><img src="/assets/images/link_talk.png" alt="KakaoTalk"></a>
+          <a href="#"><img src="/assets/images/link_zalo.png" alt="Zalo"></a>
+          <a href="#"><img src="/assets/images/link_facebook.png" alt="Facebook"></a>
         </div>
       </div>
     </div>
