--- a/Home/home.html
+++ b/Home/home.html
@@ -45,15 +45,15 @@
               <!-- Tiếng Hàn cơ bản -->
               <!-- <a class="dropdown-item" href="#" data-toggle="modal" data-target="#myModal"
                 onclick="loadContent('Tiếng Hàn cơ bản')">Tiếng Hàn cơ bản</a> -->
-              <a class="dropdown-item" href="../unit/basic/index.html"">Tiếng Hàn cơ bản</a>
+              <a class="dropdown-item" href="../unit/basic/index.html">Tiếng Hàn cơ bản</a>
               <!-- Tiếng Hàn cho thuyền viên -->
               <!-- <a class=" dropdown-item" href="#" data-toggle="modal" data-target="#myModal"
                 onclick="loadContent('Tiếng Hàn cho thuyền viên')">Tiếng Hàn cho thuyền viên</a> -->
-              <a class="dropdown-item" href="../unit/basic/index.html"">Tiếng Hàn cho thuyển viên</a>
+              <a class="dropdown-item" href="../unit/basic/index.html">Tiếng Hàn cho thuyển viên</a>
             </div>
           </li>
           <li class=" nav-item">
-                <a class="nav-link" href="#">Giáo dục an toàn</a>
+            <a class="nav-link" href="#">Giáo dục an toàn</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Thông báo</a>
