--- a/unit/basic/index.html
+++ b/unit/basic/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Học Tiếng Hàn</title>
-  <link rel="stylesheet" href="/home/home.css">
+  <link rel="stylesheet" href="../../home/home.css">
   <link rel="stylesheet" href="index.css">
-  <link rel="icon" href="/assets/images/logo_tab.png">
+  <link rel="icon" href="../../assets/images/logo_tab.png">
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <!-- jQuery -->
@@ -23,7 +23,7 @@
 <body>
   <!-- Header -->
   <header>
-    <video src="/assets/video/header_deskop.mp4" autoplay muted loop></video>
+    <video src="../../assets/video/header_deskop.mp4" autoplay muted loop></video>
   </header>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -105,7 +105,7 @@
         vocabulary!</p>
     </div>
     <div class="section-content card">
-      <img data-url="lessons/lesson1-8.html" class="mb-2" src="/assets/images/Lessons-1-8-picture.png" alt="">
+      <img data-url="lessons/lesson1-8.html" class="mb-2" src="../../assets/images/Lessons-1-8-picture.png" alt="">
       <p><span data-url="lessons/lesson1-8.html">Lessons 1 – 8: </span>Start learning actual grammar, phrases, and
         words that
         you can apply to daily
@@ -115,7 +115,7 @@
         foundation for your future studies.
     </div>
     <div class="section-content card">
-      <img class="mb-2" src="/assets/images/Lesson-9-16-pic.png" alt="">
+      <img class="mb-2" src="../../assets/images/Lesson-9-16-pic.png" alt="">
       <p><span>Lessons 9 – 16: </span>These lessons will build heavily on what you learned from earlier lessons. In
         these lessons, you will be introduced to numbers in Korean and how to deal with telling time, counting things,
         and many more things that require an understanding of numbers (Korean numbers are very confusing!). In addition,
@@ -123,7 +123,7 @@
         sentences!
     </div>
     <div class="section-content card">
-      <img class="mb-2" src="/assets/images/1725picture.png" alt="">
+      <img class="mb-2" src="../../assets/images/1725picture.png" alt="">
       <p><span>Lessons 17 – 25: </span>In these final 8 lessons of Unit 1, you will be introduced to connecting
         particles in Korean. Eventually, you will learn hundreds of these particles, but here in these lessons, you will
         be introduced to the most basic ones (~고, ~고 싶다 and ~고 있다 to name a few). You will also learn about using 잘/못 in
@@ -137,9 +137,9 @@
       <div class="footer-content">
         <span>Hoa Vàng © 2017 | Giấy phép | Liên hệ</span>
         <div class="social-icons">
-          <a href="#"><img src="/assets/images/link_talk.png" alt="KakaoTalk"></a>
-          <a href="#"><img src="/assets/images/link_zalo.png" alt="Zalo"></a>
-          <a href="#"><img src="/assets/images/link_facebook.png" alt="Facebook"></a>
+          <a href="#"><img src="../../assets/images/link_talk.png" alt="KakaoTalk"></a>
+          <a href="#"><img src="../../assets/images/link_zalo.png" alt="Zalo"></a>
+          <a href="#"><img src="../../assets/images/link_facebook.png" alt="Facebook"></a>
         </div>
       </div>
     </div>
