--- a/unit/basic/index.html
+++ b/unit/basic/index.html
@@ -35,7 +35,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 d-flex justify-content-between align-items-center">
           <li class="nav-item">
-            <a class="nav-link" href="/home/home.html">Trang chủ</a>
+            <a class="nav-link" href="../../home/home.html">Trang chủ</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle active href=" #" id="navbarDropdown" role="button" data-toggle="dropdown"
