--- a/home/home.html
+++ b/home/home.html
@@ -100,9 +100,9 @@
       <div class="footer-content">
         <span>Hoa Vàng © 2017 | Giấy phép | Liên hệ</span>
         <div class="social-icons">
-          <a href="#"><img src="/assets/images/link_talk.png" alt="KakaoTalk"></a>
-          <a href="#"><img src="/assets/images/link_zalo.png" alt="Zalo"></a>
-          <a href="#"><img src="/assets/images/link_facebook.png" alt="Facebook"></a>
+          <a href="#"><img src="../../assets/images/link_talk.png" alt="KakaoTalk"></a>
+          <a href="#"><img src="../../assets/images/link_zalo.png" alt="Zalo"></a>
+          <a href="#"><img src="../../assets/images/link_facebook.png" alt="Facebook"></a>
         </div>
       </div>
     </div>
