--- a/unit/basic/index.html
+++ b/unit/basic/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Học Tiếng Hàn</title>
+  <title>Tiếng Hàn cơ bản</title>
   <link rel="stylesheet" href="../../home/home.css">
   <link rel="stylesheet" href="index.css">
   <link rel="icon" href="../../assets/images/logo_tab.png">
@@ -16,8 +16,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
   <!-- Font Awesome CSS -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-</head>
-
 </head>
 
 <body>
@@ -105,8 +103,8 @@
         vocabulary!</p>
     </div>
     <div class="section-content card">
-      <img data-url="lessons/lesson1-8.html" class="mb-2" src="../../assets/images/Lessons-1-8-picture.png" alt="">
-      <p><span data-url="lessons/lesson1-8.html">Lessons 1 – 8: </span>Start learning actual grammar, phrases, and
+      <img data-url="lessons/index.html" class="mb-2" src="../../assets/images/Lessons-1-8-picture.png" alt="">
+      <p><span data-url="lessons/index.html">Lessons 1 – 8: </span>Start learning actual grammar, phrases, and
         words that
         you can apply to daily
         conversation! We will start by introducing you to basic Korean sentence structure, which will lead into you
