--- a/unit/basic/lessons/index.html
+++ b/unit/basic/lessons/index.html
@@ -102,8 +102,9 @@
         be presented to get you started correctly in your path to learn Korean!
     </div>
     <div class="section-content card">
-      <img class="mb-2" src="../../../assets/images/Unit1Lesson2picture.png" alt="">
-      <p><span>Lessons 2: </span>n this lesson, you will learn two more particles (이/가) to use in Korean sentences. In
+      <img data-url="lesson2.html" class="mb-2" src="../../../assets/images/Unit1Lesson2picture.png" alt="">
+      <p><span data-url="lesson2.html">Lessons 2: </span>n this lesson, you will learn two more particles (이/가) to use
+        in Korean sentences. In
         addition to those, you will learn how to use the word 있다 to make sentences like “I am at school” and “I have a
         pen.”
     </div>
