--- a/unit/basic/lessons/index.html
+++ b/unit/basic/lessons/index.html
@@ -103,65 +103,65 @@
     </div>
     <div class="section-content card">
       <img data-url="lesson2.html" class="mb-2" src="../../../assets/images/Unit1Lesson2picture.png" alt="">
-      <p><span data-url="lesson2.html">Lessons 2: </span>n this lesson, you will learn two more particles (이/가) to use
+      <p><span data-url="lesson2.html">Lessons 2: </span>In this lesson, you will learn two more particles (이/가) to use
         in Korean sentences. In
         addition to those, you will learn how to use the word 있다 to make sentences like “I am at school” and “I have a
         pen.”
     </div>
     <div class="section-content card">
-      <img class="mb-2" src="../../../assets/images/Unit1Lesson3Picture.png" alt="">
-      <p><span>Lessons 3: </span>In this lesson, you will learn how to make sentences using adjectives and verbs! We
+      <img data-url="lesson3.html" class="mb-2" src="../../../assets/images/Unit1Lesson3Picture.png" alt="">
+      <p><span data-url="lesson3.html">Lessons 3: </span>In this lesson, you will learn how to make sentences using adjectives and verbs! We
         will start off with very simple sentences in this lesson, but later you will be making sentences complex enough
         to make your head explode. In addition to that, you will learn how to say “my” thing, or “his” thing by using
         the possessive particle, 의. Finally, we will take an initial look at the differences between 좋다 (to be good) and
         좋아하다 (to like).
     </div>
     <div class="section-content card">
-      <img data-url="lesson1.html" class="mb-2" src="../../../assets/images/Unit1lesson4picture.png" alt="">
-      <p><span data-url="lesson1.html">Lessons 4: </span>In this lesson, you will learn how to change
+      <img data-url="lesson4.html" class="mb-2" src="../../../assets/images/Unit1lesson4picture.png" alt="">
+      <p><span data-url="lesson4.html">Lessons 4: </span>In this lesson, you will learn how to change
         adjectives from their dictionary form to be able to modify nouns. Using this, you will be able to create more
         complex sentences! In addition to this, you will learn the meaning of the Korean particle ‘도’ and when to use
         it. Also, I included some common greeting words, even though I feel you should put off learning them for just a
         few more lessons!
     </div>
     <div class="section-content card">
-      <img class="mb-2" src="../../../assets/images/Lesson5picturen.png" alt="">
-      <p><span>Lessons 5: </span>This lesson will most likely be the hardest step you will have to take when learning
+      <img data-url="lesson5.html" class="mb-2" src="../../../assets/images/Lesson5picturen.png" alt="">
+      <p><span data-url="lesson5.html">Lessons 5: </span>This lesson will most likely be the hardest step you will have to take when learning
         Korean. There is a lot of content in this lesson, but don’t get too worried! The knowledge that you get from
         this lesson will literally be the first major building block you will need to start conjugating verbs and
         adjectives into the past, present and future forms. In addition, you will apply your knowledge of conjugating to
         있다 and 있다 – two words that look the same, but have slightly different meanings.
     </div>
     <div class="section-content card">
-      <img class="mb-2" src="../../../assets/images/Lesson6pic.png" alt="">
-      <p><span>Lessons 6: </span>In this lesson, you will add to what you learned in Lesson 5. In Lesson 5, you
+      <img data-url="lesson6.html" class="mb-2" src="../../../assets/images/Lesson6pic.png" alt="">
+      <p><span data-url="lesson6.html">Lessons 6: </span>In this lesson, you will add to what you learned in Lesson 5. In Lesson 5, you
         learned how to conjugate using one method. In this lesson, you will learn how to conjugate verbs and adjectives
         in polite and casual ways. You will also learn how to use the word “I” depending on the respect you need to show
         during speech.
     </div>
     <div class="section-content card">
-      <img data-url="lesson1.html" class="mb-2" src="../../../assets/images/Lesson7picture.png" alt="">
-      <p><span data-url="lesson1.html">Lessons 7: </span>In this lesson, you will learn all the Korean
+      <img data-url="lesson7.html" class="mb-2" src="../../../assets/images/Lesson7picture.png" alt="">
+      <p><span data-url="lesson7.html">Lessons 7: </span>In this lesson, you will learn all the Korean
         irregulars you will need to know when conjugating sentences. Like the previous lesson, this lesson is very heavy
         on grammar. Nonetheless, these irregulars must be understood/memorized if you want to conjugate verbs/adjectives
         properly. If you understand everything, but need to refresh your mind on exactly how to implement these
         irregulars, check out our Irregular Quick Reference page.
     </div>
     <div class="section-content card">
-      <img class="mb-2" src="../../../assets/images/Lesson8.png" alt="">
-      <p><span>Lessons 8: </span>In this lesson, you will learn a major part of speech that you haven’t learned about
+      <img data-url="lesson8.html" class="mb-2" src="../../../assets/images/Lesson8.png" alt="">
+      <p><span data-url="lesson8.html">Lessons 8: </span>In this lesson, you will learn a major part of speech that you haven’t learned about
         yet: Adverbs! You will be introduced to the various types of adverbs, and how you can use them in Korean
         sentences. In addition, you will learn about how to create negative sentences in a variety of ways.
     </div>
     <div class="section-content card">
-      <img class="mb-2" src="../../../assets/images/Irregulars.png" alt="">
-      <p><span>Irregulars Quick Reference: </span>Use this lesson as a Quick Guide to remembering the various irregulars
+      <img data-url="lesson1-8_irregulars_quick.html" class="mb-2" src="../../../assets/images/Irregulars.png" alt="">
+      <p><span data-url="lesson1-8_irregulars_quick.html">Irregulars Quick Reference: </span>Use this lesson as a Quick Guide to remembering the various irregulars
         in Korean! If you can’t understand an irregular perfectly, check out Lesson 7 where each irregular is explained
         in detail. Or you could always ask us a question by making a comment!
     </div>
     <div class="section-content card">
-      <img class="mb-2" src="../../../assets/images/Minitestpicture.png" alt="">
-      <p><span>Lessons 1 – 8 Mini-Test: </span>est yourself on what you learned from these first eight lessons! A
+      <img data-url="lesson1_8_mini_test.html" class="mb-2" src="../../../assets/images/Minitestpicture.png" alt="">
+      <p><span data-url="lesson1_8_mini_test.html">Lessons 1 – 8 Mini-Test: </span>Test yourself on what you learned from these first eight lessons! A
         Mini-Test like this will be uploaded after every eight lessons. Don’t worry if the test doesn’t go so well –
         this website is here to help you!
     </div>
