--- a/unit/plus/index.html
+++ b/unit/plus/index.html
@@ -44,7 +44,7 @@
               <!-- Tiếng Hàn cơ bản -->
               <!-- <a class="dropdown-item" href="#" data-toggle="modal" data-target="#myModal"
                 onclick="loadContent('Tiếng Hàn cơ bản')">Tiếng Hàn cơ bản</a> -->
-              <a class="dropdown-item" href="#">Tiếng Hàn cơ bản</a>
+              <a class="dropdown-item" href="../basic/index.html">Tiếng Hàn cơ bản</a>
               <!-- Tiếng Hàn cho thuyền viên -->
               <!-- <a class=" dropdown-item" href="#" data-toggle="modal" data-target="#myModal"
                 onclick="loadContent('Tiếng Hàn cho thuyền viên')">Tiếng Hàn cho thuyền viên</a> -->
