--- a/unit/plus/index.html
+++ b/unit/plus/index.html
@@ -48,7 +48,7 @@
               <!-- Tiếng Hàn cho thuyền viên -->
               <!-- <a class=" dropdown-item" href="#" data-toggle="modal" data-target="#myModal"
                 onclick="loadContent('Tiếng Hàn cho thuyền viên')">Tiếng Hàn cho thuyền viên</a> -->
-              <a class="dropdown-item" href="/unit/plus/index.html">Tiếng Hàn cho thuyền viên</a>
+              <a class="dropdown-item" href="#">Tiếng Hàn cho thuyền viên</a>
             </div>
           </li>
           <li class=" nav-item">
