--- a/unit/basic/index.html
+++ b/unit/basic/index.html
@@ -113,16 +113,18 @@
         foundation for your future studies.
     </div>
     <div class="section-content card">
-      <img class="mb-2" src="../../assets/images/Lesson-9-16-pic.png" alt="">
-      <p><span>Lessons 9 – 16: </span>These lessons will build heavily on what you learned from earlier lessons. In
+      <img data-url="lessons/index2.html" class="mb-2" src="../../assets/images/Lesson-9-16-pic.png" alt="">
+      <p><span data-url="lessons/index2.html">Lessons 9 – 16: </span>These lessons will build heavily on what you
+        learned from earlier lessons. In
         these lessons, you will be introduced to numbers in Korean and how to deal with telling time, counting things,
         and many more things that require an understanding of numbers (Korean numbers are very confusing!). In addition,
         you will learn about passive verbs, asking questions, and how to use many grammar formations to create many new
         sentences!
     </div>
     <div class="section-content card">
-      <img class="mb-2" src="../../assets/images/1725picture.png" alt="">
-      <p><span>Lessons 17 – 25: </span>In these final 8 lessons of Unit 1, you will be introduced to connecting
+      <img data-url="lessons/index3.html" class="mb-2" src="../../assets/images/1725picture.png" alt="">
+      <p><span data-url="lessons/index3.html">Lessons 17 – 25: </span>In these final 8 lessons of Unit 1, you will be
+        introduced to connecting
         particles in Korean. Eventually, you will learn hundreds of these particles, but here in these lessons, you will
         be introduced to the most basic ones (~고, ~고 싶다 and ~고 있다 to name a few). You will also learn about using 잘/못 in
         sentences to indicate that you do something well/poorly. In addition, you will learn the many different ways
