--- a/unit/basic/lessons/lesson20.html
+++ b/unit/basic/lessons/lesson20.html
@@ -168,7 +168,8 @@
         <p style="text-align: left;">Example:<br />
           여자는 자기의 모습을 <strong>거울</strong>에서 봤어요 = She looked at herself in the <strong>mirror<br />
           </strong>제 모습을 <strong>거울</strong>에서 보는 중이에요 = I’m looking at myself (my appearance) in the
-          <strong>mirror</strong></p>
+          <strong>mirror</strong>
+        </p>
         <p>집주인이 부서진 <strong>거울</strong>을 찾아낼까 봐 걱정돼요<br />
           = I’m worried that the landlord will find the shattered <strong>mirror</strong></p>
         <p><strong> </strong>뒤에 있는 차가 저의 시야에 있게 <strong>거울</strong>을 조금 움직였어요<br />
