--- a/unit/basic/lessons/lesson22.html
+++ b/unit/basic/lessons/lesson22.html
@@ -902,14 +902,16 @@
                 style="text-decoration: line-through;">사람이</span> <span style="text-decoration: line-through;">무슨</span>
               <span style="text-decoration: line-through;">사람이야</span><span
                 style="text-decoration: line-through;">?</span><br />
-              Awkward</td>
+              Awkward
+            </td>
             <td width="189">그는 어떤 사람이야?<br />
               What type of person is he?</td>
             <td width="189"><span style="text-decoration: line-through;">그</span> <span
                 style="text-decoration: line-through;">사람이</span> <span style="text-decoration: line-through;">어느</span>
               <span style="text-decoration: line-through;">사람이야</span><span
                 style="text-decoration: line-through;">?</span><br />
-              Awkward</td>
+              Awkward
+            </td>
           </tr>
           <tr>
             <td width="132">Choosing among options<br />
@@ -932,13 +934,15 @@
             <td width="198"><span style="text-decoration: line-through;">나는</span> <span
                 style="text-decoration: line-through;">무슨</span> <span style="text-decoration: line-through;">책을</span>
               <span style="text-decoration: line-through;">읽었어</span><br />
-              Awkward</td>
+              Awkward
+            </td>
             <td width="189">나는 어떤 책을 읽었어<br />
               I read some book</td>
             <td width="189"><span style="text-decoration: line-through;">나는</span> <span
                 style="text-decoration: line-through;">어느</span> <span style="text-decoration: line-through;">책을</span>
               <span style="text-decoration: line-through;">읽었어</span><br />
-              Awkward</td>
+              Awkward
+            </td>
           </tr>
         </tbody>
       </table>
